# skymantle-boto-buddy

./: Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: status_checks.yml
src/skymantle_boto_buddy/: __init__.py  cloudformation.py  dynamodb.py  logs.py  s3.py  ssm.py  stepfunctions.py  sts.py
tests/: test_cloudformation.py  test_dynamodb.py  test_init.py  test_logs.py  test_s3.py  test_ssm.py  test_stepfunctions.py  test_sts.py
