[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skymantle_boto_buddy"
description = "A wrappper for boto3 to access common aws severless services."
authors = [{ name = "Artin Yong-Bannayan", email = "ayongbannayan@skymantle.com" }]
readme = "README.md"
dynamic = ["version"]
requires-python = ">=3.11"
dependencies=[]

[project.optional-dependencies]
boto = ["boto3"]

[project.urls]
Home = "https://github.com/skymantle-tech/boto3-powertools"
Issues = "https://github.com/skymantle-tech/boto3-powertools/issues"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "src/skymantle_boto_buddy/__about__.py"

[tool.hatch.envs.default]
features = ["boto"]
dependencies = [
  "mypy",
  "pytest",
  "pytest-cov",
  "pytest-mock",
  "bandit",
  "black",
  "ruff",
  "moto[s3,dynamodb,ssm,cloudformation,sts,logs,stepfunction]"
]
path = ".venv"

[tool.hatch.envs.default.scripts]
_bandit = "bandit -c pyproject.toml -r {args:.}"
_ruff = "ruff {args:.}"
_black = "black --check --diff {args:.}"
_mypy = "mypy --install-types --non-interactive {args:.}"
cov = "pytest -v --cov-config=pyproject.toml --cov {args:./src} "


[tool.mypy]
exclude = [
    "dist",
    ".venv"
]

[tool.black]
line-length = 120
extend-exclude = '''
(
  ^/setup.py
)
'''


[tool.bandit]
skips = ['B324']
exclude_dirs = [".venv", "tests", "dist", "setup.py"]

[tool.ruff]
exclude = [".venv", "setup.py"]
target-version = "py311"
line-length = 120
select = [
  "A",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "SIM",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Ignore checks for use `datetime.UTC` alias
  "UP017",
  # Ignore checks for f-string literal in exception message
  "EM102",
  # Ignore too many arguments in function definition
  "PLR0913"
]
unfixable = []

[tool.ruff.flake8-quotes]
inline-quotes = "double"

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "I001"]

[tool.coverage.run]
branch = true
parallel = true
source = ["src"]
omit = [
    ".venv/*",
    "tests/*",
    "src/skymantle_boto_buddy/__about__.py",
    "setup.py"
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.pytest.ini_options]
pythonpath = "src"
markers = []

[tool.hatch.build.targets.sdist]
support-legacy = true
exclude = [
  "/.vscode",
  "/.github",
  ".gitignore",
  "Makefile"
]